--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <body>
 <div th:fragment="commonMenu">
-    <a href="/users/self">Your page</a><span>&emsp;</span>
+    <span th:if="${currentUser != null}"><a href="/users/self">My page</a><span>&emsp;</span></span>
     <a href="/posts">Posts</a><span>&emsp;</span>
     <a href="/users">Users</a><span>&emsp;</span>
+    <div th:if="${currentUser == null}">
+        <br/>
+        <a href="/auth/login">login</a> or
+        <a href="/auth/register">register</a>
+    </div>
+    <div th:if="${currentUser != null}">
+        <form method="POST" action="/auth/logout">
+            <input type="submit" value="Log out"/>
+        </form>
+    </div>
     <hr/>
 </div>
 </body>
