--- a/src/main/resources/templates/posts/posts.html
+++ b/src/main/resources/templates/posts/posts.html
@@ -9,7 +9,7 @@
         <div th:insert="~{fragments/menu :: commonMenu}"></div>
         <div th:each="post : ${posts}">
             <div>
-                <span>by <a th:href="@{/users/__${post.getUser().getId()}__}" th:text="${post.getUser().getUsername()}">user</a></span>
+                <span>by <a th:href="@{/users/__${post.getUserId()}__}" th:text="${post.getUser().getUsername()}">user</a></span>
                 <span>at <span th:text="${post.getCreatedAt()}">created at</span></span>
                 <b><a th:href="@{/posts/__${post.getId()}__}" th:text="${post.getTitle()}">post</a></b>
                 <br/>
