--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<div th:fragment="commonMenu">
+<div id="commonMenu" th:fragment="commonMenu">
     <span th:if="${currentUser != null}"><a href="/users/self">My page</a><span>&emsp;</span></span>
     <a href="/posts">Posts</a><span>&emsp;</span>
     <a href="/users">Users</a><span>&emsp;</span>
-    <div th:if="${currentUser == null}">
+    <div id="auth-block" th:if="${currentUser == null}">
         <br/>
         <a href="/auth/login">login</a> or
         <a href="/auth/register">register</a>
