--- a/src/main/resources/templates/posts/posts.html
+++ b/src/main/resources/templates/posts/posts.html
@@ -7,6 +7,7 @@
 <body>
     <div>
         <div th:insert="~{fragments/menu :: commonMenu}"></div>
+        <h2>Posts</h2>
         <div th:each="post : ${posts}">
             <div>
                 <span>by <a th:href="@{/users/__${post.getUserId()}__}" th:text="${post.getUser().getUsername()}">user</a></span>
